I finished investigation 7. Section 3.28 I'm not sure if my results make sense with synonymous and nonsynonymous mutations.

--- a/Final_Project_Part_1.Rmd
+++ b/Final_Project_Part_1.Rmd
@@ -836,105 +836,471 @@ library(dbscan)
 ## 3.25 Survival Analysis for Each Top Gene
 # Test association between each gene mutation and DSS
 ```{r inv7_individual}
-# For each of the top 20 genes:
-# 1. Divide patients into mutated vs non-mutated groups
-# 2. Create Kaplan-Meier curves for DSS
-# 3. Perform log-rank test
-# 4. Calculate hazard ratio using Cox proportional hazards model
-# [INSERT CODE HERE]
 
-# Store results in dataframe: gene, hazard_ratio, CI_lower, CI_upper, p_value
-# [INSERT CODE HERE]
+library(survival) # Does the Kaplan-Meier curves and Cox Regression
+library(survminer) # Makes survival plots
+
+# Get the top 20 genes
+top_20_gene_names <- top_20_genes$Hugo_Symbol
+
+# Initialize results dataframe
+# Creates and empty dataframe to store results
+gene_dss_results <- data.frame(
+  Gene = character(),
+  Mutated_Patients = integer(),
+  Non_Mutated_Patients = integer(),
+  Hazard_Ratio = numeric(),
+  CI_Lower = numeric(),
+  CI_Upper = numeric(),
+  P_Value = numeric(),
+  Log_Rank_P = numeric(),
+  stringsAsFactors = FALSE
+)
+
+# Create a list to store survival plots
+survival_plots_list <- list()
+
+# Loop through each of the top 20 genes
+for (gene in top_20_gene_names) {
+  
+  # Get mutation status for this gene across common patients
+  gene_mutations <- gene_patient_matrix[gene, ]
+  
+  # Create a temporary dataframe matching patients
+  temp_df <- data.frame(
+    PATIENT_ID = names(gene_mutations),
+    Gene_Mutated = as.numeric(gene_mutations),
+    stringsAsFactors = FALSE
+  )
+  
+  # Merge with clinical data (Joins mutation statue with clincal survival data)
+  merged_data <- merge(
+    data_clinical_patient,
+    temp_df,
+    by = "PATIENT_ID",
+    all.x = FALSE
+  )
+  
+  # Remove rows with missing DSS data
+  merged_data <- merged_data[!is.na(merged_data$DSS_MONTHS) & 
+                             !is.na(merged_data$DSS_STATUS), ]
+  
+  # Count patients in each group
+  n_mutated <- sum(merged_data$Gene_Mutated == 1) #How many have the mutation
+  n_non_mutated <- sum(merged_data$Gene_Mutated == 0)#How many don't
+  
+  # Skip if too few patients in either group (Can't do reliable statistics with tiny groups)
+  if (n_mutated < 3 || n_non_mutated < 3) {
+    next
+  }
+  
+  # Create survival object for DSS
+  surv_dss <- Surv(
+    time = merged_data$DSS_MONTHS,
+    event = 1 - merged_data$DSS_STATUS  # Convert to event (1 = death)
+  )
+  
+  # Fit Kaplan-Meier model (changes 0 -> Non-mutated & 1 -> mutated)
+  merged_data$Gene_Status <- factor(
+    merged_data$Gene_Mutated,
+    levels = c(0, 1),
+    labels = c("Non-Mutated", "Mutated")
+  )
+  
+  fit_km <- survfit(surv_dss ~ Gene_Status, data = merged_data)
+  
+  # Perform log-rank test
+  log_rank_test <- survdiff(surv_dss ~ Gene_Status, data = merged_data)
+  log_rank_p <- pchisq(log_rank_test$chisq, 
+                       length(log_rank_test$n) - 1, 
+                       lower.tail = FALSE)
+  
+  # Fit Cox proportional hazards model
+  cox_model <- coxph(surv_dss ~ Gene_Mutated, data = merged_data)
+  cox_summary <- summary(cox_model)
+  
+  # Extract hazard ratio and confidence interval
+  hr <- cox_summary$conf.int[1, 1] # Hazard Ratio -> 2.35 =  2.35x higher risk
+  ci_lower <- cox_summary$conf.int[1, 3] # 95% confidence upper bound
+  ci_upper <- cox_summary$conf.int[1, 4] # 95% confidence lower bound
+  cox_p <- cox_summary$coefficients[1, 5] # P-value from Cox model
+  
+  # Store results
+  gene_dss_results <- rbind(gene_dss_results, data.frame(
+    Gene = gene,
+    Mutated_Patients = n_mutated,
+    Non_Mutated_Patients = n_non_mutated,
+    Hazard_Ratio = hr,
+    CI_Lower = ci_lower,
+    CI_Upper = ci_upper,
+    P_Value = cox_p,
+    Log_Rank_P = log_rank_p,
+    stringsAsFactors = FALSE
+  ))
+  
+  # Create and store survival plot for significant genes (p < 0.05)
+  if (log_rank_p < 0.05) {
+    plot_obj <- ggsurvplot(
+      fit_km,
+      data = merged_data,
+      pval = TRUE,
+      conf.int = TRUE,
+      risk.table = TRUE,
+      palette = c("blue", "red"),
+      title = paste0("DSS for ", gene, " Mutation"),
+      xlab = "Time (Months)",
+      ylab = "Disease-Specific Survival Probability",
+      legend.labs = c("Non-Mutated", "Mutated"),
+      ggtheme = theme_minimal(base_size = 12)
+    )
+    survival_plots_list[[gene]] <- plot_obj
+  }
+}
+
+# Display results sorted by p-value
+gene_dss_results <- gene_dss_results[order(gene_dss_results$P_Value), ]
+print(gene_dss_results)
 ```
 
 ## 3.26 Multiple Testing Correction
 # Adjust p-values for 20 comparisons
 ```{r inv7_correction}
-# Apply Bonferroni or FDR correction
-# [INSERT CODE HERE]
+# Apply Bonferroni correction
+gene_dss_results$P_Value_Bonferroni <- p.adjust(
+  gene_dss_results$P_Value, 
+  method = "bonferroni"
+)
 
-# Identify genes significantly associated with DSS
-# [INSERT CODE HERE]
+# Apply Benjamini-Hochberg FDR correction
+gene_dss_results$P_Value_FDR <- p.adjust(
+  gene_dss_results$P_Value, 
+  method = "fdr"
+)
+
+# Summary of results
+cat("\nMULTIPLE TESTING CORRECTION RESULTS\n\n")
+
+# Count significant genes at different thresholds
+n_nominal <- sum(gene_dss_results$P_Value < 0.05)
+n_fdr <- sum(gene_dss_results$P_Value_FDR < 0.05)
+n_bonf <- sum(gene_dss_results$P_Value_Bonferroni < 0.05)
+
+cat("Genes significant BEFORE correction (p < 0.05):", n_nominal, "\n")
+cat("Genes significant AFTER FDR correction (p < 0.05):", n_fdr, "\n")
+cat("Genes significant AFTER Bonferroni correction (p < 0.05):", n_bonf, "\n\n")
+
+# Show top 5 candidate genes
+cat("TOP 5 CANDIDATE GENES (Ranked by P-Value) \n\n")
+top5 <- head(gene_dss_results[, c("Gene", "Mutated_Patients", "Hazard_Ratio", 
+                                   "P_Value", "P_Value_FDR", "P_Value_Bonferroni")], 5)
+print(top5, row.names = FALSE)
+
+# If any genes passed FDR correction, show them
+if (n_fdr > 0) {
+  cat("\n GENES PASSING FDR CORRECTION\n\n")
+  significant_genes_fdr <- gene_dss_results[gene_dss_results$P_Value_FDR < 0.05, 
+                                             c("Gene", "Hazard_Ratio", "P_Value", "P_Value_FDR")]
+  print(significant_genes_fdr, row.names = FALSE)
+} else {
+  cat("\n*** No genes reached statistical significance after FDR correction ***\n")
+  cat("This suggests that while some genes show suggestive associations,\n")
+  cat("the evidence is not strong enough to confidently rule out chance findings.\n")
+}
+
+# Interpretation note for nominally significant genes
+if (n_nominal > 0 & n_fdr == 0) {
+  cat("\nINTERPRETATION \n")
+  cat("Although", n_nominal, "gene(s) showed p < 0.05 before correction,\n")
+  cat("none survived multiple testing correction. This means:\n")
+  cat("1. These associations may be worth investigating in larger studies\n")
+  cat("2. They should be considered hypothesis-generating, not confirmed\n")
+  cat("3. Larger sample sizes may be needed to detect true effects\n")
+}
+
 ```
 
 ## 3.27 Visualize Results
 # Create forest plot and summary table
 ```{r inv7_visualize}
+library(ggplot2)
+
 # Create forest plot of hazard ratios with confidence intervals
-# [INSERT CODE HERE]
+gene_dss_results$Gene <- factor(
+  gene_dss_results$Gene, 
+  levels = gene_dss_results$Gene[order(gene_dss_results$Hazard_Ratio)]
+)
 
-# Create summary table with all results
-# Columns: Gene, Mutation Frequency, HR, CI, p-value, adjusted p-value
-# [INSERT CODE HERE]
+# Add significance marker
+gene_dss_results$Significant <- ifelse(
+  gene_dss_results$P_Value_FDR < 0.05, 
+  "Significant (FDR < 0.05)", 
+  "Not Significant"
+)
 
-# Visualize top genes with significant DSS association
-# [INSERT CODE HERE]
+# Forest plot
+forest_plot <- ggplot(gene_dss_results, 
+                      aes(x = Hazard_Ratio, y = Gene, color = Significant)) +
+  geom_point(size = 3) +
+  geom_errorbarh(aes(xmin = CI_Lower, xmax = CI_Upper), height = 0.3) +
+  geom_vline(xintercept = 1, linetype = "dashed", color = "black") +
+  scale_color_manual(values = c("Significant (FDR < 0.05)" = "red", 
+                                "Not Significant" = "grey60")) +
+  labs(
+    title = "Forest Plot: Hazard Ratios for Disease-Specific Survival",
+    subtitle = "Top 20 Mutated Genes in KIRC",
+    x = "Hazard Ratio (95% CI)",
+    y = "Gene",
+    color = "Significance"
+  ) +
+  theme_minimal(base_size = 12) +
+  theme(
+    plot.title = element_text(hjust = 0.5, face = "bold"),
+    plot.subtitle = element_text(hjust = 0.5),
+    legend.position = "bottom"
+  )
+
+print(forest_plot)
+
+# Create comprehensive summary table
+summary_table <- gene_dss_results[, c("Gene", "Mutated_Patients", 
+                                      "Hazard_Ratio", "CI_Lower", "CI_Upper", 
+                                      "P_Value", "P_Value_FDR")]
+summary_table$HR_95CI <- sprintf("%.2f (%.2f-%.2f)", 
+                                 summary_table$Hazard_Ratio,
+                                 summary_table$CI_Lower,
+                                 summary_table$CI_Upper)
+
+# Round numeric columns
+summary_table$P_Value <- format.pval(summary_table$P_Value, digits = 3)
+summary_table$P_Value_FDR <- format.pval(summary_table$P_Value_FDR, digits = 3)
+
+# Select final columns
+final_table <- summary_table[, c("Gene", "Mutated_Patients", "HR_95CI", 
+                                 "P_Value", "P_Value_FDR")]
+colnames(final_table) <- c("Gene", "N Mutated", "HR (95% CI)", 
+                           "P-Value", "Adjusted P (FDR)")
+
+cat("\n=== Summary Table: Gene Mutations and Disease-Specific Survival ===\n")
+print(final_table, row.names = FALSE)
+
+# Display survival plots for significant genes
+if (length(survival_plots_list) > 0) {
+  cat("\n=== Kaplan-Meier Curves for Significant Genes ===\n")
+  for (gene_name in names(survival_plots_list)) {
+    print(survival_plots_list[[gene_name]])
+  }
+}
 ```
 
 **Observations:**
-# [COMMENT HERE: Which genes are most strongly associated with DSS? Protective or harmful?]
+
+The analysis reveals several key findings about gene mutations and disease-specific survival in KIRC patients:
+
+1. **Prognostic Genes**: Genes with hazard ratios significantly different from 1.0 (after FDR correction) represent important prognostic biomarkers. 
+   - HR > 1: Mutations associated with worse survival (harmful)
+   - HR < 1: Mutations associated with better survival (protective)
+
+2. **Effect Size**: The magnitude of the hazard ratio indicates the strength of association. Genes with HR > 2 or < 0.5 have particularly strong effects on survival.
+
+3. **Statistical Significance**: Multiple testing correction (FDR) is crucial when testing 20 genes to control for false positives. Genes significant after correction represent robust associations.
+
+4. **Clinical Implications**: Genes significantly associated with DSS could serve as:
+   - Prognostic biomarkers for risk stratification
+   - Potential therapeutic targets
+   - Indicators for treatment selection
 
 
 ## 3.28 ALTERNATIVE ANALYSIS: Synonymous vs Non-Synonymous Mutations
 # Compare survival outcomes by mutation type
 ```{r inv7_mutation_type}
-# Filter mutations by type
-# Variant_Classification column contains mutation type information
-# [INSERT CODE HERE]
 
-# Classify mutations as synonymous or non-synonymous
-# Non-synonymous: Missense, Nonsense, Frame_Shift, Splice_Site, etc.
-# Synonymous: Silent mutations
-# [INSERT CODE HERE]
+#I'm not sure if this section makes sense. I don't know if I did the analysis right here. Another set of eyes would be great here. 
 
-# For each top gene, compare DSS between:
-# 1. Patients with non-synonymous mutations
-# 2. Patients with synonymous mutations
-# 3. Patients with no mutations (reference)
-# [INSERT CODE HERE]
+synonymous_types <- c("Silent")
 
-# Kaplan-Meier curves stratified by mutation type
-# [INSERT CODE HERE]
+non_synonymous_types <- c(
+  "Missense_Mutation",
+  "Nonsense_Mutation", 
+  "Frame_Shift_Del",
+  "Frame_Shift_Ins",
+  "Splice_Site",
+  "In_Frame_Del",
+  "In_Frame_Ins",
+  "Translation_Start_Site",
+  "Nonstop_Mutation"
+)
 
-# Statistical tests (log-rank, Cox regression)
-# [INSERT CODE HERE]
+# Initialize results for mutation type analysis
+mutation_type_results <- data.frame(
+  Gene = character(),
+  N_Synonymous = integer(),
+  N_NonSynonymous = integer(),
+  N_NoMutation = integer(),
+  P_Value_Overall = numeric(),
+  stringsAsFactors = FALSE
+)
+
+# We need to use the full mutations dataset (not just non_synonymous_dataset) because we need to find synonymous mutations too
+all_mutations_common <- data_mutations[
+  substr(data_mutations$Tumor_Sample_Barcode, 1, 12) %in% common_patients, 
+]
+
+# Analyze each top gene
+for (gene in top_20_gene_names) {
+  
+  # Get all mutations for this gene (including synonymous)
+  gene_mut_data <- all_mutations_common[
+    all_mutations_common$Hugo_Symbol == gene, 
+  ]
+  
+  # Skip if no mutations
+  if (nrow(gene_mut_data) == 0) next
+  
+  # Create mutation type classification for each patient
+  mutation_status <- data.frame(
+    PATIENT_ID = common_patients,
+    Mutation_Type = "None",
+    stringsAsFactors = FALSE
+  )
+  
+  for (i in 1:nrow(gene_mut_data)) {
+    patient_id <- substr(gene_mut_data$Tumor_Sample_Barcode[i], 1, 12)
+    var_class <- gene_mut_data$Variant_Classification[i]
+    
+    if (patient_id %in% mutation_status$PATIENT_ID) {
+      if (var_class %in% synonymous_types) {
+        mutation_status$Mutation_Type[mutation_status$PATIENT_ID == patient_id] <- "Synonymous"
+      } else if (var_class %in% non_synonymous_types) {
+        mutation_status$Mutation_Type[mutation_status$PATIENT_ID == patient_id] <- "Non-Synonymous"
+      }
+    }
+  }
+  
+  # Merge with clinical data
+  merged_data <- merge(
+    data_clinical_patient,
+    mutation_status,
+    by = "PATIENT_ID",
+    all.x = FALSE
+  )
+  
+  # Remove missing DSS data
+  merged_data <- merged_data[!is.na(merged_data$DSS_MONTHS) & 
+                             !is.na(merged_data$DSS_STATUS), ]
+  
+  # Count each group
+  n_syn <- sum(merged_data$Mutation_Type == "Synonymous")
+  n_nonsyn <- sum(merged_data$Mutation_Type == "Non-Synonymous")
+  n_none <- sum(merged_data$Mutation_Type == "None")
+  
+  # Skip if insufficient data in mutation groups
+  if (n_syn < 3 && n_nonsyn < 3) next
+  
+  # Create survival object
+  surv_dss <- Surv(
+    time = merged_data$DSS_MONTHS,
+    event = 1 - merged_data$DSS_STATUS
+  )
+  
+  # Determine which groups actually exist
+  existing_groups <- unique(merged_data$Mutation_Type)
+  
+  # Create factor with only existing levels
+  merged_data$Mutation_Type <- factor(
+    merged_data$Mutation_Type,
+    levels = existing_groups
+  )
+  
+  # Fit Kaplan-Meier by mutation type
+  fit_type <- survfit(surv_dss ~ Mutation_Type, data = merged_data)
+  
+  # Log-rank test
+  log_rank_test <- survdiff(surv_dss ~ Mutation_Type, data = merged_data)
+  p_overall <- pchisq(log_rank_test$chisq, 
+                     length(log_rank_test$n) - 1, 
+                     lower.tail = FALSE)
+  
+  # Store results
+  mutation_type_results <- rbind(mutation_type_results, data.frame(
+    Gene = gene,
+    N_Synonymous = n_syn,
+    N_NonSynonymous = n_nonsyn,
+    N_NoMutation = n_none,
+    P_Value_Overall = p_overall,
+    stringsAsFactors = FALSE
+  ))
+  
+  # Plot if significant (p < 0.05) and sufficient data
+  if (p_overall < 0.05 && (n_syn >= 3 || n_nonsyn >= 3)) {
+    
+    # Create dynamic legend labels based on which groups exist
+    # Match colors to specific mutation types (not order-dependent)
+    legend_labels <- character()
+    palette_colors <- character()
+    
+    if ("None" %in% existing_groups) {
+      legend_labels <- c(legend_labels, "No Mutation")
+      palette_colors <- c(palette_colors, "blue")
+    }
+    if ("Synonymous" %in% existing_groups) {
+      legend_labels <- c(legend_labels, "Synonymous")
+      palette_colors <- c(palette_colors, "orange")  
+    }
+    if ("Non-Synonymous" %in% existing_groups) {
+      legend_labels <- c(legend_labels, "Non-Synonymous")
+      palette_colors <- c(palette_colors, "red")
+    }
+    
+    plot_obj <- ggsurvplot(
+      fit_type,
+      data = merged_data,
+      pval = TRUE,
+      conf.int = FALSE,
+      risk.table = TRUE,
+      palette = palette_colors,
+      title = paste0("DSS by Mutation Type: ", gene),
+      xlab = "Time (Months)",
+      ylab = "Disease-Specific Survival Probability",
+      legend.labs = legend_labels,
+      ggtheme = theme_minimal(base_size = 12)
+    )
+    print(plot_obj)
+  }
+}
+
+# Display results
+mutation_type_results <- mutation_type_results[
+  order(mutation_type_results$P_Value_Overall), 
+]
+
+cat("\nMUTATION TYPE ANALYSIS RESULTS \n\n")
+print(mutation_type_results, row.names = FALSE)
+
+# Summary interpretation
+if (nrow(mutation_type_results) == 0) {
+  cat("\n*** No genes had sufficient data for mutation type analysis ***\n")
+  cat("This occurs when genes have very few or no synonymous mutations.\n")
+} else {
+  cat("\nINTERPRETATION \n")
+  cat("This analysis tests whether the FUNCTIONAL IMPACT of mutations matters.\n")
+  cat("- Synonymous mutations: Change DNA but NOT protein (usually harmless)\n")
+  cat("- Non-synonymous mutations: Change DNA AND protein (potentially damaging)\n\n")
+  
+  if (any(mutation_type_results$P_Value_Overall < 0.05)) {
+    cat("Genes with p < 0.05 show that mutation type affects survival.\n")
+    cat("If non-synonymous mutations have worse outcomes, it suggests the\n")
+    cat("functional disruption of the protein drives disease progression.\n")
+  } else {
+    cat("No genes showed significant differences between mutation types.\n")
+    cat("This may indicate:\n")
+    cat("1. Sample sizes are too small to detect differences\n")
+    cat("2. Very few synonymous mutations exist in these genes\n")
+    cat("3. The analysis is underpowered for this comparison\n")
+  }
+}
+
 ```
 
-**Observations:**
-# [COMMENT HERE: Do non-synonymous mutations have worse outcomes than synonymous?]
-
-
-# ==============================================================================
-# SECTION 4: COMPREHENSIVE RESULTS SUMMARY
-# ==============================================================================
-
-## 4.1 Summary of Key Findings
-```{r summary}
-# Create comprehensive summary tables and figures
-
-# --- DEMOGRAPHICS AND CLINICAL CHARACTERISTICS ---
-# [INSERT CODE HERE]
-
-# --- SURVIVAL OUTCOMES ---
-# Median survival times for OS, DSS, PFS, DFS
-# [INSERT CODE HERE]
-
-# --- MUTATION ANALYSIS ---
-# Top mutated genes and their frequencies
-# [INSERT CODE HERE]
-
-# --- CLUSTERING RESULTS ---
-# Number of clusters, sizes, clinical associations
-# [INSERT CODE HERE]
-
-# --- GENE-GENE INTERACTIONS ---
-# Significant co-mutations and mutual exclusivity
-# [INSERT CODE HERE]
-
-# --- PROGNOSTIC GENES ---
-# Genes significantly associated with DSS
-# [INSERT CODE HERE]
-```
 
 
 # ==============================================================================
